--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
   "name": "electron-quick-start",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "jinheekim",
+  "description": "My first electron app",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "electron": "^12.0.5"
+    "start": "electron ."
   }
 }
